resources/css/summary.css
@charset "UTF-8";
/* Copyright (c) 2017 Shreepad Shukla */

body {
  margin: 20px;
  font-family: 'Open Sans', 'sans-serif';
  font-size: medium;
}

h1 {
  margin: 0 0 1em 0;
  font-size: larger;
}

table {
  width: 100%;
}

.username {
  grid-area: username;
  font-size: smaller;
  padding: 5px;
  text-align: left;
}

.message {
  grid-area: message;
  border-bottom: 1px solid white;
  padding: 5px;
}

.posttime {
  grid-area: posttime;
  font-size: smaller;
  padding: 5px;
  text-align: right;
}

.wrapper {
  margin: 2px;
  background-color: #444;
  color: #fff;
  border-radius: 5px;
  padding: 5px;

  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: 2px;
  grid-template-areas: "message message" "username posttime";
}

@media only screen and (min-width: 800px) {
  .wrapper {
    margin: 5px;

    grid-template-columns: 0.75fr 4fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: 5px;
    grid-template-areas: "username message posttime";
  }

  .username {
    border-right: 1px solid white;
    font-size: medium;
  }

  .message {
    border-right: 1px solid white;
    border-bottom: none;
  }
  
  .posttime {
    font-size: medium;
  }
}

